Add description to site metadata

--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="A battle tracker for Dungeons & Dragons 5th Edition">
     <title>D&D Battle Tracker</title>
   </head>
   <body>
