Improve description, title, add keywords, add description to Footer

--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -8,8 +8,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A battle tracker for Dungeons & Dragons 5th Edition">
-    <title>D&D Battle Tracker</title>
+    <meta name="description" content="D&D Battle Tracker is a combat management tool for Dungeons & Dragons 5th Edition (D&D 5e)">
+    <meta content="Dungeons, Dragons, Combat, Battle, Tracker, D&amp;D, 5e" name="keywords">
+    <title>D&D Battle Tracker | D&D 5e Combat Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
