--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -11,6 +11,7 @@
     <meta name="description" content="D&D Battle Tracker is a combat tracker tool for Dungeons & Dragons 5th Edition (D&D 5e). Track the initiative and status of all creatures involved in combat with this D&D combat tracker!">
     <meta content="D&D Battle Tracker, D&D Combat Tracker, Dungeons, Dragons, Combat, Battle, Tracker, Initiative, D&amp;D, 5e" name="keywords">
     <title>D&D Battle Tracker | D&D 5e Combat Tracker</title>
+    {{{styleBundle}}}
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
