--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" 
           type="image/png" 
           href="https://dndbattletracker.com/favicon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&family=Open+Sans&display=swap" rel="stylesheet">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
