Add webmanifest for PWA installation

--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -7,6 +7,7 @@
           href="https://dndbattletracker.com/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="manifest" href="dndbattletracker.webmanifest" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
