Update SEO keywords

--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -14,7 +14,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="D&D Battle Tracker is a combat tracker tool for Dungeons & Dragons 5th Edition (D&D 5e). Track the initiative and status of all creatures involved in combat with this D&D combat tracker!">
-    <meta content="D&D Battle Tracker, D&D Combat Tracker, Dungeons, Dragons, Combat, Battle, Tracker, Initiative, D&amp;D, 5e" name="keywords">
+    <meta content="D&D Battle Tracker, D&D Combat Tracker, D&D Initiative Tracker, Dungeons, Dragons, Combat, Battle, Tracker, Initiative, D&amp;D, 5e" name="keywords">
     <title>D&D Battle Tracker | D&D 5e Combat Tracker</title>
     {{{styleBundle}}}
   </head>
