--- a/public/index.mustache.html
+++ b/public/index.mustache.html
@@ -13,8 +13,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="D&D Battle Tracker is a combat tracker tool for Dungeons & Dragons 5th Edition (D&D 5e). Track the initiative and status of all creatures involved in combat with this D&D combat tracker!">
-    <meta content="D&D Battle Tracker, D&D Combat Tracker, D&D Initiative Tracker, Dungeons, Dragons, Combat, Battle, Tracker, Initiative, D&amp;D, 5e" name="keywords">
+    <meta name="description" content="D&D Battle Tracker is an initiative and combat tracker tool for Dungeons & Dragons 5th Edition (D&D 5e).">
+    <meta content="D&D Battle Tracker, D&D Combat Tracker, D&D Initiative Tracker, Dungeons and Dragons, 5e" name="keywords">
     <title>D&D Battle Tracker | D&D 5e Combat Tracker</title>
     {{{styleBundle}}}
   </head>
